# Posta

./: .gitignore  IMPROVEMENT_PLAN.md  PATTERN_AUDIT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src/: App.css  App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calendar.rs  calendar_tests.rs  commands.rs  lib.rs  main.rs  models.rs  people.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/auth/: callback.rs  mod.rs  oauth2.rs
src-tauri/src/cache/: mod.rs  sqlite.rs
src-tauri/src/gmail/: mod.rs
src-tauri/src/icloud/: kvstore.rs  mod.rs
src/api/: tauri.ts
src/components/: ActionsWheel.tsx  CalendarEventCard.tsx  CardForm.tsx  ComposeAtoms.tsx  ComposeForm.tsx  CreateEventForm.tsx  EmojiPicker.tsx  EventView.tsx  Icons.tsx  MessageActionsWheel.tsx  MessageBody.tsx  ReactionButton.tsx  SmartReplies.tsx  ThreadView.tsx  types.ts
src/shared/: constants.ts  storage.ts
